[metadata]
name = hesperos
version = 0.1.7
author = Charlotte Godard
author_email = charlotte.godard@pasteur.fr

license = BSD-3-Clause
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: BSD License

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    qtpy
    tifffile
    scikit-image
    scikit-learn
    SimpleITK
    pandas
    napari
    napari-plugin-engine

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml, *.svg

[options.entry_points]
napari.manifest =
    hesperos = hesperos:napari.yaml
