[metadata]
name = hesperos
version = 0.1.30

author = Charlotte Godard
author_email = charlotte.godard@pasteur.fr
url = https://github.com/chgodard/hesperos

license = BSD-3-Clause
description = A plugin to manually or semi-automatically segment medical data and correct previous segmentation data.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls = 
    Documentation = https://github.com/chgodard/hesperos/blob/main/README.md
    Source Code = https://github.com/chgodard/hesperos

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm

# add your package requirements here
install_requires =
    numpy
    qtpy
    tifffile
    scikit-image
    scikit-learn
    SimpleITK
    pandas
    napari<0.4.15
    napari-plugin-engine
    imageio_ffmpeg

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml, *.svg

[options.entry_points]
napari.manifest =
    hesperos = hesperos:napari.yaml
